--- a/packages/framework/src/comp/control/text/index.less
+++ b/packages/framework/src/comp/control/text/index.less
@@ -23,3 +23,18 @@
     text-align: center;
   }
 }
+
+.ctrl-input-text {
+
+  &.align-left {
+    text-align: left;
+  }
+
+  &.align-right {
+    text-align: right;
+  }
+
+  &.align-center {
+    text-align: center;
+  }
+}
